kubernetes/core/omada/config/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-wave: "10"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`omada.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          # - name: forwardauth-authelia # Required for mobile
      services:
        - name: omada-management
          port: 443
  tls:
    secretName: bhamm-lab-tls
